# uniform_bspline

./: CMakeLists.txt  Doxyfile  README.md  package.xml
doc/: README_doxygen.md
include/uniform_bspline/: control_points_container.hpp  control_points_trait.hpp  control_points_trait_eigen.hpp  control_points_trait_multi_array.hpp  control_points_trait_std_container.hpp  fixed_size_container_type_trait.hpp  fixed_size_container_type_trait_default.hpp  fixed_size_container_type_trait_eigen.hpp  multi_array.hpp  uniform_bspline.hpp  utilities.hpp  value_type_trait.hpp
scripts/: exporter.m  generate_bspline_basis_cpp_files  generate_test_data
test/: control_points_container.cpp  control_points_trait.cpp  examples.cpp  multi_array.cpp  uniform_bspline.cpp
test/test_data/: test_points_1.txt  test_points_10.txt  test_points_11.txt  test_points_12.txt  test_points_13.txt  test_points_14.txt  test_points_2.txt  test_points_3.txt  test_points_4.txt  test_points_5.txt  test_points_6.txt  test_points_7.txt  test_points_8.txt  test_points_9.txt  test_points_smoothness_1.txt  test_points_smoothness_10.txt  test_points_smoothness_11.txt  test_points_smoothness_12.txt  test_points_smoothness_13.txt  test_points_smoothness_14.txt  test_points_smoothness_15.txt  test_points_smoothness_16.txt  test_points_smoothness_17.txt  test_points_smoothness_18.txt  test_points_smoothness_19.txt  test_points_smoothness_2.txt  test_points_smoothness_20.txt  test_points_smoothness_21.txt  test_points_smoothness_22.txt  test_points_smoothness_23.txt  test_points_smoothness_24.txt  (+7 more)
(+10 files in other folders)
